# registry-research-toolkit

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude/skills/init-mona-project/: SKILL.md
.claude/skills/init-mona-project/templates/: air.toml
.claude/skills/init-mona-project/templates/src/: manage_packages.R
.claude/skills/registry-metadata-search/: SKILL.md
.claude/skills/regmeta-query/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish_mock_data_wizard.yml  publish_regmeta.yml
mock_data_wizard/: DESIGN.md  PLAN_mock_data_wizard.md  PLAN_mock_data_wizard_v2.md  README.md  SPEC_mock_data_wizard.md  SPEC_mock_data_wizard_v2.md  pyproject.toml
mock_data_wizard/scripts/: build_mona_bundle.py  probe_mona.R  probe_mona.Rout  probe_mona_python.py  probe_mona_upload.py
mock_data_wizard/src/mock_data_wizard/: __init__.py  _util.py  classify.py  cli.py  enrich.py  extract.py  generate.py  script_gen.py  sources.py  sql_emit.py  stats.py  summarize.py  update.py
mock_data_wizard/tests/: conftest.py  test_build_mona_bundle.py  test_classify.py  test_cli.py  test_compare.py  test_enrich.py  test_extract.py  test_generate.py  test_script_gen.py  test_script_gen_integration.py  test_sources.py  test_sql_emit.py  test_stats.py  test_summarize.py  test_update.py
plugins/microdata-tools-se/: PRIVACY.md  README.md  TERMS.md
plugins/microdata-tools-se/.claude-plugin/: plugin.json
plugins/microdata-tools-se/.codex-plugin/: plugin.json
plugins/microdata-tools-se/skills/init-mona-project/: SKILL.md
plugins/microdata-tools-se/skills/init-mona-project/references/: generated-files.md  workflow.md
plugins/microdata-tools-se/skills/init-mona-project/templates/src/: helpers.R  plotting.R
plugins/microdata-tools-se/skills/init-mona-project/templates/tests/: testthat.R
plugins/microdata-tools-se/skills/init-mona-project/templates/tests/testthat/: test-guards.R
plugins/microdata-tools-se/skills/register-metadata-search/: SKILL.md
plugins/microdata-tools-se/skills/registry-metadata-search/: SKILL.md
regmeta/: CLASSIFICATIONS.md  DESIGN.md  PLAN_regmeta.md  README.md  SPEC_regmeta.md  SPEC_regmeta_v2.md  STRUCTURE.md  classifications.toml  pyproject.toml
regmeta/docs/: SCHEMA.md
regmeta/docs/lisa/: ADelDag.md  AGSTFA.md  AK14Dag.md  AKassaAmPol.md  AKtErs_Tidsbegr.md  ALKod.md  ALUAMK.md  ALUBidr.md  ALUEES.md  ALUKAS.md  ALUKU.md  ALosDag.md  AMK.md  ANysDag.md  AStuDag.md  ASysDag.md  ASysTyp.md  ATPAld.md  ATPBel.md  ATPFam.md  ATPFort.md  ATPFortSjuk.md  ATPSjuk.md  ATPegen.md  Afrika.md  Akassa.md  AktErs.md  AktErsGarAnd.md  AktErsInkAnd.md  AktErsVilAnd.md  AktErs_Bdag_MiDAS.md  AktErs_Belopp_MiDAS.md  AktErs_Ndag_MiDAS.md  AktStod_Belopp.md  AktStod_Dag.md  AktStod_Sjuk_Belopp.md  AktStod_Sjuk_Dag.md  AldPens.md  AldTjPTyp.md  Alder.md  (+543 more)
regmeta/input_data/classifications/: agarkat2000.csv  agarkat2020.csv  isced-f2013.csv  isced2011.csv  jurform2000.csv  jurform2020.csv  lkf1982.csv  lkf1986.csv  lkf1993.csv  lkf1995.csv  lkf1997.csv  lkf1998.csv  lkf2002.csv  lkf2005.csv  lkf2007.csv  lkf2015.csv  lkf2016.csv  lkf2017.csv  lkf2018.csv  lkf2019.csv  lkf2020.csv  lkf2021.csv  lkf2022.csv  lkf2023.csv  lkf2024.csv  lkf2025.csv  lkf2026.csv  niva-grov.csv  niva-old.csv  sektor2000.csv  sni2002.csv  sni2007.csv  sni69.csv  sni92.csv  ssyk2012.csv  ssyk96.csv  sun1996.csv  sun2000-grupp.csv  sun2000-inriktning.csv  sun2000-niva.csv  (+3 more)
regmeta/src/regmeta/: __init__.py  classifications.py  cli.py  db.py  doc_db.py  doc_queries.py  download.py  errors.py  queries.py  update.py
regmeta/src/regmeta/sources/: __init__.py  sos.py
regmeta/tests/: _csv_fixtures.py  conftest.py  test_build_db.py  test_classifications.py  test_commands.py  test_doc_commands.py  test_hints.py  test_integration.py  test_sos_parser.py  test_update.py
scripts/: check_versions.sh  extract_lkf.py  parse_lisa_docs.py  smoke_init_mona.sh
