[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regmeta"
version = "0.6.2"
description = "Search and query SCB registry metadata"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adam Altmejd", email = "adam@altmejd.se" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["zstandard>=0.23"]

[project.urls]
Homepage = "https://github.com/adamaltmejd/registry-research-toolkit"
Repository = "https://github.com/adamaltmejd/registry-research-toolkit"
Issues = "https://github.com/adamaltmejd/registry-research-toolkit/issues"

[project.scripts]
regmeta = "regmeta.cli:main"

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/regmeta"]

# Docs are shipped separately as the `regmeta_docs.db.zst` release asset
# (see doc_db.py and .claude/skills/release/SKILL.md); they are NOT bundled
# in the wheel. The markdown under regmeta/docs/ is for maintainers to edit
# and contribute; users get the built doc DB via `regmeta maintain update`.
